Correct collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,92 +1,11 @@
 @import '../../utils/style/GlobalStyle.scss';
 
-// .CollapseContainer {
-//   display: flex;
-//   flex-direction: column;
-//   margin: 0px 30px;
-//   //   transition: all 300ms ease-in-out;
-//   width: 100%;
-//   button {
-//     background: $primary-color;
-//     width: 100%;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     padding: 0px 20px;
-//     border: none;
-//     border-radius: 5px;
-//     height: 50px;
-//     margin: 10px 0px 0px 0px;
-//     &:hover {
-//       opacity: 0.9;
-//     }
-//     h2 {
-//       font-family: 'Montserrat';
-//       color: white;
-//       font-weight: 500;
-//     }
-//     img {
-//       transition: transform 300ms ease-in-out;
-//     }
-//   }
-//   div {
-//     font-size: 18px;
-//     font-weight: 400;
-//     padding: 20px;
-//     background: $secondary-color;
-//     margin: 0px;
-//     border-radius: 0px 0px 5px 5px;
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-//   }
-//   &__isClosed {
-//     img {
-//       transform: rotate(0deg);
-//     }
-//     div {
-//       visibility: hidden;
-//       opacity: 0;
-//       height: 0;
-//     }
-//   }
-//   &__isOpen {
-//     img {
-//       transform: rotate(180deg);
-//     }
-//     div {
-//       visibility: visible;
-//       opacity: 1;
-//       height: 100%;
-//     }
-//   }
-//   @media only screen and (max-width: 1023px) {
-//     margin: 0px;
-//     width: 100%;
-//     button {
-//       height: 30px;
-//       padding: 0px 10px;
-//       h2 {
-//         font-size: 13px;
-//       }
-//       img {
-//         width: 16px;
-//       }
-//     }
-//     div {
-//       font-size: 12px;
-//       padding: 10px;
-//     }
-//   }
-// }
-
 .CollapseContainer {
   display: flex;
   flex-direction: column;
   margin: 0px 30px;
   width: 100%;
   transition: all 300ms ease-in-out;
-  //   height: 100%;
   h2 {
     font-family: 'Montserrat';
     color: white;
@@ -96,12 +15,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 20px;
+    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     height: 50px;
     margin: 10px 0px 0px 0px;
-    // transition: transform 300ms ease-in-out;
     .arrow {
       transition: transform 300ms ease-in-out;
       &.arrow-up {
@@ -126,19 +44,16 @@
     flex-direction: column;
     width: 100%;
     visibility: visible;
-    // overflow: visible;
     opacity: 1;
-    height: 1;
-    // transform: translateY(1);
+    height: 100%;
+    transform: translateY(1);
     transition: all 300ms ease-in-out;
-    // transition: transform 300ms ease-in-out;
   }
   .collapse_content_hidden {
     visibility: hidden;
-    // overflow: hidden;
     opacity: 0;
     height: 0;
-    // transform: translateY(0);
+    transform: translateY(0);
     transition: all 300ms ease-in-out;
   }
   @media only screen and (max-width: 1023px) {
