--- a/src/pages/Accomodation/Accomodation.scss
+++ b/src/pages/Accomodation/Accomodation.scss
@@ -3,7 +3,6 @@
 .AccomodationPresentation {
   margin: 10px 100px 20px 100px;
   display: flex;
-  max-height: 140px;
   .AccomodationContent {
     width: 75%;
     display: flex;
